--- a/etc/nzdrm.conf
+++ b/etc/nzdrm.conf
@@ -10,7 +10,7 @@
 ;;fail				= "etc/mail_templates/exec_fail"
 ;;error				= "etc/mail_templates/exec_error"
 ;;success			= "etc/mail_templates/exec_success"
-recipients			= "foubar.v+devcron@gmail.com"
+recipients			= "mail@domain.tld"
 
 ;;[params]
 profiler 			= true
@@ -26,4 +26,3 @@ profile_in_mail		= true
 ;;L_ALL => 99
 
 log_threshold		= 300
-;;log_date_format	= "Y-m-d H:i:s"
