--- a/etc/nzdrm.conf
+++ b/etc/nzdrm.conf
@@ -7,9 +7,6 @@
 ;;tmp				= ""
 
 ;;[mails]
-;;fail				= "etc/mail_templates/exec_fail"
-;;error				= "etc/mail_templates/exec_error"
-;;success			= "etc/mail_templates/exec_success"
 recipients			= "mail@domain.tld"
 
 ;;[params]
@@ -18,11 +15,11 @@ profiler 			= true
 mail_on_success 	= true
 profile_in_mail		= true
 
-;;L_NONE => 0
-;;L_ERROR => 400
-;;L_WARNING => 300
-;;L_DEBUG => 200
-;;L_INFO => 100
-;;L_ALL => 99
+;;NONE => 0
+;;ERROR => 400
+;;WARNING => 300
+;;DEBUG => 200
+;;INFO => 100
+;;ALL => 50
 
 log_threshold		= 300
